--- a/front_end/package.json
+++ b/front_end/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.13.3",
     "classnames": "^2.5.1",
     "formik": "^2.4.5",
+    "front_end": "file:",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
