--- a/front_end/.env
+++ b/front_end/.env
@@ -1,4 +1,4 @@
 NEXTAUTH_SECRET=98E3B2CC28F61492C6934531C828C
 NEXTAUTH_URL=http://localhost:3000/
 
-GOOGLE_API_KEY=AIzaSyD0l0j1fbA7hv674XJw5ZEYkszjtOP4fwg
+GOOGLE_API_KEY=
